kit/envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_http_proxy
    address:
      socket_address: { address: 0.0.0.0, port_value: 3128 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: forward_proxy
          use_remote_address: true
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          upgrade_configs:
            - upgrade_type: CONNECT
              enabled: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: forward_proxy
              domains: ["*"]
              routes:
              # CONNECT allowlist: explicit authorities (GitHub endpoints over 443)
              - match:
                  connect_matcher: {}
                  headers:
                  - name: ":authority"
                    string_match: { exact: "github.com:443" }
                route:
                  cluster: dynamic_forward_proxy_cluster
                  upgrade_configs: [ { upgrade_type: CONNECT } ]
              - match:
                  connect_matcher: {}
                  headers:
                  - name: ":authority"
                    string_match: { exact: "ssh.github.com:443" }
                route:
                  cluster: dynamic_forward_proxy_cluster
                  upgrade_configs: [ { upgrade_type: CONNECT } ]
              - match:
                  connect_matcher: {}
                  headers:
                  - name: ":authority"
                    string_match: { exact: "objects.githubusercontent.com:443" }
                route:
                  cluster: dynamic_forward_proxy_cluster
                  upgrade_configs: [ { upgrade_type: CONNECT } ]
              - match:
                  connect_matcher: {}
                  headers:
                  - name: ":authority"
                    string_match: { exact: "api.github.com:443" }
                route:
                  cluster: dynamic_forward_proxy_cluster
                  upgrade_configs: [ { upgrade_type: CONNECT } ]
              # Normal HTTP(S) allowlist examples
              - match:
                  prefix: "/"
                  headers:
                  - name: ":authority"
                    string_match: { exact: "github.com" }
                route: { cluster: dynamic_forward_proxy_cluster }
              - match:
                  prefix: "/"
                  headers:
                  - name: ":authority"
                    string_match: { exact: "objects.githubusercontent.com" }
                route: { cluster: dynamic_forward_proxy_cluster }
              - match:
                  prefix: "/"
                  headers:
                  - name: ":authority"
                    string_match: { exact: "api.github.com" }
                route: { cluster: dynamic_forward_proxy_cluster }
              # Default deny
              - match: { prefix: "/" }
                direct_response: { status: 403 }
          http_filters:
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              dns_cache_config:
                name: dynamic_dns_cache
                dns_lookup_family: V4_ONLY
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: dynamic_forward_proxy_cluster
    connect_timeout: 5s
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        dns_cache_config:
          name: dynamic_dns_cache
          dns_lookup_family: V4_ONLY

admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
